# jetblack-iso8601

./: README.md  mkdocs.yml  mypy.ini  pyproject.toml
1.0/: 404.html  index.html
1.0/api/jetblack_iso8601/: index.html
1.0/user-guide/installation/: index.html
1.0/user-guide/usage/: index.html
docs/: 404.html  index.html
docs/api/: jetblack_iso8601.md
docs/api/jetblack_iso8601/: index.html
docs/search/: search_index.json
docs/user-guide/installation/: index.html
docs/user-guide/usage/: index.html
documentation/: index.md
documentation/user-guide/: installation.md  usage.md
jetblack_iso8601/: __init__.py  date_time.py  duration.py
stable/api/jetblack_iso8601/: index.html
tests/: test_date_time.py  test_duration.py
