[tool.poetry]
name = "jetblack-iso8601"
version = "1.0.2"
description = "ISO 8601 support"
repository = "https://github.com/rob-blackbourn/jetblack-iso8601"
authors = ["Rob Blackbourn <rob.blackbourn@gmail.com>"]
keywords = ['iso8601', 'jetblack']
license = "Apache-2.0"
readme = "README.md"
packages = [
  { include = "jetblack_iso8601" }
]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
autopep8 = "^1.4"
mypy = "^0.910"
pylint = "^2.9"
pytest = "^5.3"
pytest-runner = "^5.2"
rope = "^0.16.0"
mkdocs = "^1.2"
mkdocs-material = "^7.2"
jetblack-markdown = "^0.6"
mike = "^1.1.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
