[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "jetblack-iso8601"
version = "2.0.0"
description = "ISO 8601 support"
authors = [
  { name="Rob Blackbourn", email="rob.blackbourn@gmail.com" },
]
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
readme = "README.md"
keywords = ['iso8601', 'jetblack']
license = {text = "Apache-2.0"}

[project.optional-dependencies]
dev = [
    "pytest",
    "coverage",
    "autopep8",
    "pylint",
    "mypy"
]
docs = [
    "mkdocs",
    "mkdocs-material",
    "jetblack-markdown",
    "mike",
]

[project.urls]
Homepage = "https://github.com/rob-blackbourn/jetblack-iso8601"
Issues = "https://github.com/rob-blackbourn/jetblack-iso8601/issues"

# pytest
[tool.pytest.ini_options]
testpaths = [
    "tests",
]

# mypy
[tool.mypy]
files = [ "src/jetblack_iso8601", "tests", "scratch" ]

[[tool.mypy.overrides]]
module = "pytest"
ignore_missing_imports = true

# pylint
[tool.pylint.main]
py-version = "3.12"
jobs = 4

[tool.pylint.basic]
good-names = ["i", "j", "k", "ex", "Run", "_"]
bad-names = ["foo", "bar", "baz", "toto", "tutu", "tata"]

[tool.pylint."messages control"]
disable = [
    "raw-checker-failed",
    "bad-inline-option",
    "locally-disabled",
    "file-ignored",
    "suppressed-message",
    "useless-suppression",
    "deprecated-pragma",
    "use-symbolic-message-instead",
    "use-implicit-booleaness-not-comparison-to-string",
    "use-implicit-booleaness-not-comparison-to-zero",
    "missing-module-docstring",
]
